--- a/src/assets/styles/themes/theme2.scss
+++ b/src/assets/styles/themes/theme2.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
+
 $theme-colors: (
     "light":      #c0f4ed,
     "dark":       #331c29,
@@ -7,8 +9,47 @@ $theme-colors: (
     "success":    #24a964,
     "warning":    #e4cc23,
     "danger":     #f31e11,
+    "default": rgb(182, 58, 207)
 );
 
+$input-font-family: 'Itim', cursive !default;
 
-$input-focus-border-color: blue;
+$modal-content-bg:rgb(229, 174, 240);
+$body-bg: #9b5de6;
+$input-focus-border-color: rgb(177, 143, 175);
+$input-bg: rgb(177, 143, 175);
+$modal-content-color:rgb(101, 9, 104);
+
+$input-btn-focus-box-shadow:   0px 5px 5px rgb(109, 96, 96);
+$input-btn-focus-border-color:   none;
+$btn-border-with:5px !default;
+$border-radius: 0px !default;
+
+$border-style:                solid !default;
+$border-color:               black !default;
+
+$modal-fade-transform:              translate(0, 100px);
+$modal-show-transform:              none;
+$modal-transition:                  transform .3s ease-out;
+$modal-scale-transform:             scale(1.02);
+
 @import 'bootstrap/scss/bootstrap';
+
+.btn-default{
+  border:1px solid white;
+  box-shadow: 0 2px #999;
+}
+
+.btn:active {
+  background-color: black;
+  box-shadow: 0 0px #666;
+  transform: scale(1.1);
+}
+
+.btn-footer-close{
+  background-color: unset !important;
+}
+
+.modal-footer{
+  background-color: unset !important;
+}
